chore: fix broken links in posts

--- a/_posts/2020-11-06-dashes.md
+++ b/_posts/2020-11-06-dashes.md
@@ -5,16 +5,16 @@ date: 2020-11-06 04:55 +09:00
 tags: ['#100DaysToOffload', 'типографика']
 ---
 
-Это Пост 20 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это Пост 20 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Разобрался с этими чёрточками, тире и минусами. Составил таблицу, которая поможет вам сориентироваться:
 
 | Тип           | Пример       | Комбинация клавиш  | Подробнее |
 | --------------| -------------| -------------------| ----------|
-| Дефис         | Кто-то       | `-`                   | Разделяет части слова |
-| Длинное тире  | Дуб — дерево | `Альт` + `-`          | Ставится между словами на синтаксическом уровне (отбивается пробелами) |
-| Короткое тире | 2010–2020    | `Альт` + `Шифт` + `-` | Ставится между числами (не отбивается пробелами) |
-| Минус         | 10 − 2 = 8   | `Альт` + `m`          | По ширине равен знаку равно |
+| Дефис         | Кто-то       | <kbd>-</kbd>                   | Разделяет части слова |
+| Длинное тире  | Дуб — дерево | <kbd>Альт</kbd> + <kbd>-</kbd>          | Ставится между словами на синтаксическом уровне (отбивается пробелами) |
+| Короткое тире | 2010–2020    | <kbd>Альт</kbd> + <kbd>Шифт</kbd> + <kbd>-</kbd> | Ставится между числами (не отбивается пробелами) |
+| Минус         | 10 − 2 = 8   | <kbd>Альт</kbd> + <kbd>m</kbd>          | По ширине равен знаку равно |
 
 Для того чтобы работали хоткеи, рекомендую поставить [раскладку Бирмана](https://ilyabirman.ru/projects/typography-layout/).
 
