--- a/_posts/2020-11-12-bookmarks-7.md
+++ b/_posts/2020-11-12-bookmarks-7.md
@@ -5,7 +5,7 @@ date: 2020-11-12 18:44 +09:00
 tags: ['#100DaysToOffload', 'bookmarks']
 ---
 
-Это Пост 25 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это Пост 25 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Я принёс вам закладок. Читайте, смотрите и слушайте.
 
@@ -17,5 +17,5 @@ tags: ['#100DaysToOffload', 'bookmarks']
 6. [Инвест-проповедь](https://kenest.com/invest/). Стонкс! Офигенная статья про инвестиции. О том, как гниют бабки во вкладах, как вкатиться в стонкс и как не проебаться.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-7/stonks.png" data-action="zoom" alt="Абстрактный мем про Стонкс.">
+  <img src="/images/bookmarks-7/stonks.png" data-action="zoom" alt="Абстрактный мем про Стонкс.">
 </figure>
