--- a/_posts/2020-06-09-lki.md
+++ b/_posts/2020-06-09-lki.md
@@ -5,7 +5,7 @@ date: 2020-06-09 20:40 +09:00
 tags: ['#100DaysToOffload', 'детство', 'видеоигры']
 ---
 
-Это День 2 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это День 2 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Ещё один гештальт, который я хочу закрыть. В детстве я ходил в городскую библиотеку, чтобы почитать игровые и компьютерные журналы. Страна Игр, ЛКИ, Хакер. В библиотеке работали знакомые мамы и иногда они мне дарили списанные журналы. В какое-то время я был подписан на Навигатор Игрового Мира и стабильно покупал Игроманию. Дома копились кипы журналов. Читал я их везде: приносил их в школу, читал их в кровати перед сном, в туалете, на даче. Книги меня мало интересовали.
 
@@ -14,14 +14,14 @@ tags: ['#100DaysToOffload', 'детство', 'видеоигры']
 Недавно я вспомнил, что в журнале ЛКИ была рубрика, где за присланные баги в играх тебя могли напечатать и подарить диск с игрой. Моей любимой игрой в 2008 году был S.T.A.L.K.E.R.: Shadow of Chernobyl. Игра известна до сих пор своими багами и глитчами. Было несложно наткнуться на них, но я умудрился наткнуться на баг, который позволял дюпать квестовый предмет неограниченное число раз. Радостный я настрочил письмо и отправил в редакцию ЛКИ. Не помню через сколько, но моё письмо напечатали в мартовском номере 2008 года.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/lki/1.jpg" data-action="zoom" alt="Обложка журнала Лучшие Компьютерные Игры за март, 2008 года.">
+  <img src="/images/lki/1.jpg" data-action="zoom" alt="Обложка журнала Лучшие Компьютерные Игры за март, 2008 года.">
   <figcaption>На диске с этим номером был спидран Сталкера</figcaption>
 </figure>
 
 А вот и само письмо.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/lki/2.jpg" data-action="zoom" alt="Моё письмо в редакцию ЛКИ о найденном баге в игре Сталкер: Тень Чернобыля.">
+  <img src="/images/lki/2.jpg" data-action="zoom" alt="Моё письмо в редакцию ЛКИ о найденном баге в игре Сталкер: Тень Чернобыля.">
   <figcaption>ВНИМАНИЕ!</figcaption>
 </figure>
 
