--- a/_posts/2020-07-29-artifact.md
+++ b/_posts/2020-07-29-artifact.md
@@ -5,7 +5,7 @@ date: 2020-07-29 21:45 +09:00
 tags: ['#100DaysToOffload', 'проекты']
 ---
 
-Это День 6 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это День 6 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Оказывается, необязательно доводить дело или проект до конца, если тебе не в кайф и нет радости от процесса.
 
