--- a/_posts/2020-08-12-bookmarks-6.md
+++ b/_posts/2020-08-12-bookmarks-6.md
@@ -5,16 +5,16 @@ date: 2020-08-12 14:00 +09:00
 tags: ['#100DaysToOffload', 'bookmarks']
 ---
 
-Это Пост 13 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это Пост 13 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Возрождение старого формата, в котором я делюсь ссылками на статьи, видео, музыку и т.п.
 
 ---
 
-[Overthinking](https://teletype.in/@uxlive/overthinking). Офигенная статья про то, как мы много и без надобности думаем, думаем и думаем. А дела не делаем. Важно убить в себе внутреннего перфекциониста, перестать плодить сущности (Оккам не одобряет) и просто выполнять задачи и проекты без задней мысли. Статью упоминал, кстати, в этом [посте]({{ site.url }}/overthinking-and-bitwarden/).
+[Overthinking](https://teletype.in/@uxlive/overthinking). Офигенная статья про то, как мы много и без надобности думаем, думаем и думаем. А дела не делаем. Важно убить в себе внутреннего перфекциониста, перестать плодить сущности (Оккам не одобряет) и просто выполнять задачи и проекты без задней мысли. Статью упоминал, кстати, в этом [посте](/overthinking-and-bitwarden/).
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-6/okkam.jpg" data-action="zoom" alt="Мем про Оккама с бритвой, которую он поднёс к горлу некого мужчины. Сверху надпись: 'Раньше философские дискуссии проходили бодрее.' Оккам кричит: 'Не плоди сущностей, сука! Не плоди сущностей!' Мужчина отвечает: 'Хорошо, Оккам, только убери бритву!'. Мем за авторством: cynicmansion.ru 2009.">
+  <img src="/images/bookmarks-6/okkam.jpg" data-action="zoom" alt="Мем про Оккама с бритвой, которую он поднёс к горлу некого мужчины. Сверху надпись: 'Раньше философские дискуссии проходили бодрее.' Оккам кричит: 'Не плоди сущностей, сука! Не плоди сущностей!' Мужчина отвечает: 'Хорошо, Оккам, только убери бритву!'. Мем за авторством: cynicmansion.ru 2009.">
   <figcaption>Ха-ха, старый добрый Оккам</figcaption>
 </figure>
 
@@ -27,7 +27,7 @@ tags: ['#100DaysToOffload', 'bookmarks']
 [the rapidly dwindling sanity of valve programmers as expressed through code comments](https://www.youtube.com/watch?v=k238XpMMn38). Экзистенциальный ужас программистов из Вальв. Ну, видео на чисто похихикать и успокоить себя в том, что даже в Вальв код не идеален.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-6/valve.png" data-action="zoom" alt="Скриншот комментария из исходного кода Вальв. Комментарий: 'I don't know why, I don't want to know why, I shouldn't have to wonder why, but for whatever reason this stupid panel isn't laying out correctly unless we do this terribleness.'">
+  <img src="/images/bookmarks-6/valve.png" data-action="zoom" alt="Скриншот комментария из исходного кода Вальв. Комментарий: 'I don't know why, I don't want to know why, I shouldn't have to wonder why, but for whatever reason this stupid panel isn't laying out correctly unless we do this terribleness.'">
   <figcaption>Признайся. Узнал. Заплакал.</figcaption>
 </figure>
 
@@ -38,7 +38,7 @@ tags: ['#100DaysToOffload', 'bookmarks']
 Обсидиан хорош тем, что есть поддержка Маркдаун, плагины, графовое отображение заметок, поддержка медиа и даже диктофон есть.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-6/zettelkasten.png" data-action="zoom" alt="Скриншот моего графа в программе Обсидиан.">
+  <img src="/images/bookmarks-6/zettelkasten.png" data-action="zoom" alt="Скриншот моего графа в программе Обсидиан.">
   <figcaption>Мой <strike>пездюк</strike> Зеттелькастен</figcaption>
 </figure>
 
@@ -54,7 +54,7 @@ tags: ['#100DaysToOffload', 'bookmarks']
 [А как делать блог?](https://vas3k.ru/notes/how_to_blog/). Отличная статья для тех, кто собирается завести блог или кто уже сидит на блогерной игле одобрения. Собраны советы о чём писать, как писать, где хоститься и как монетизировать.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-6/vas3k.jpg" data-action="zoom" alt="Мем за автортвом Вастрика про собеседования в Айти.">
+  <img src="/images/bookmarks-6/vas3k.jpg" data-action="zoom" alt="Мем за автортвом Вастрика про собеседования в Айти.">
   <figcaption><a href="https://i.vas3k.ru/4655f95113464680c28c8a80349d78a5c5fa20ae0c877951f9ee1f52e81645d2.jpg">Источник</a></figcaption>
 </figure>
 
@@ -65,7 +65,7 @@ tags: ['#100DaysToOffload', 'bookmarks']
 [My wonderful world of macOS](https://github.com/nikitavoloboev/my-mac-os). До сих пор поражаюсь, какой же автор поехавший (в хорошем смысле этого слова). Отличный пример хорошо структурированной информации. Только взгляните на его [вики](https://wiki.nikitavoloboev.xyz/)!
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-6/wiki.jpg" data-action="zoom" alt="Граф связей из Вики Никиты Волобоева.">
+  <img src="/images/bookmarks-6/wiki.jpg" data-action="zoom" alt="Граф связей из Вики Никиты Волобоева.">
   <figcaption>Его <strike>пездюк</strike> Вики. <a href="https://i.imgur.com/SbhfKGm.png">Источник</a></figcaption>
 </figure>
 
