--- a/_posts/2020-08-12-captcha.md
+++ b/_posts/2020-08-12-captcha.md
@@ -5,12 +5,12 @@ date: 2020-08-12 13:47 +09:00
 tags: ['#100DaysToOffload', 'ux']
 ---
 
-Это Пост 12 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это Пост 12 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Я нашёл самую идевательски сложную каптчу. Она находится на [сайте форума компании rombica](http://forum.rombica.ru/). Хотел найти на нём драйвера для ТВ-тюнера, который я использую для оцифровки старых видеокассет. Драйверов нет на официальном сайте. Хотел спросить, есть ли они у кого-нибудь на форуме.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/captcha/rombica.png" data-action="zoom" alt="Скриншот из форума компании Ромбика, где изображена очень плохая капча. В ней нужно правильно указать категории товаров компании Ромбика.">
+  <img src="/images/captcha/rombica.png" data-action="zoom" alt="Скриншот из форума компании Ромбика, где изображена очень плохая капча. В ней нужно правильно указать категории товаров компании Ромбика.">
   <figcaption>В аду, наверное, вместо варения в котлах, черти застявляют проходить эту капчу</figcaption>
 </figure>
 
