--- a/_posts/2020-12-04-bookmarks-8.md
+++ b/_posts/2020-12-04-bookmarks-8.md
@@ -5,7 +5,7 @@ date: 2020-12-04 18:10 +09:00
 tags: ['#100DaysToOffload', 'bookmarks']
 ---
 
-Это Пост 34 из 100 челленджа [#100DaysToOffload]({{ site.url }}/tags/#100daystooffload). Подробнее о челлендже [тут]({{ site.url }}/100-days-to-offload).
+Это Пост 34 из 100 челленджа [#100DaysToOffload](/tags/#100daystooffload). Подробнее о челлендже [тут](/100-days-to-offload).
 
 Я принёс вам ссылок. Читайте, смотрите и слушайте.
 
@@ -16,5 +16,5 @@ tags: ['#100DaysToOffload', 'bookmarks']
 4. [apetor](https://www.youtube.com/user/apetor). Прикольный канал мужика из Норвегии. Снимает влоги, которые не скучно смотреть.
 
 <figure>
-  <img src="{{ site.url }}/assets/images/bookmarks-8/apetor.jpg" data-action="zoom" alt="Скриншот из видео с Ютьюб-канала apetor, где он пьёт водку с горла на фоне заснеженного озера. apetor — мужик из Норвегии, который просто снимает влоги, где купается в одних трусах зимой в проруби, и издаёт смешные звуки.">
+  <img src="/images/bookmarks-8/apetor.jpg" data-action="zoom" alt="Скриншот из видео с Ютьюб-канала apetor, где он пьёт водку с горла на фоне заснеженного озера. apetor — мужик из Норвегии, который просто снимает влоги, где купается в одних трусах зимой в проруби, и издаёт смешные звуки.">
 </figure>
